--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "preview": "tsc && vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
     "axios": "^1.7.2",
     "date-fns": "^3.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.52.2",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.23.1",
-    "styled-components": "^6.1.8"
+    "styled-components": "^6.1.8",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^22.2.0",
