--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-hook-form": "^7.52.2",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.23.1",
+    "react-toastify": "^10.0.5",
     "styled-components": "^6.1.8",
     "zod": "^3.23.8"
   },
